# rust-web

./: .env  Cargo.toml
models/: Cargo.toml
models/src/: base.rs  lib.rs
restaurant/: Cargo.toml
restaurant/src/: back_of_house.rs  front_of_house.rs  lib.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/base/: user.rs
src/: main1.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs
web/src/base/: menu.rs  mod.rs  user.rs
