[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive", "rc"] }

# rbatis deps
rbs = { version = "4.5"}
rbatis = { version = "4.5"}
