[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
models = { path = "../models" }
services = { path = "../services" }
#restaurant = { path = "restaurant" }
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde_json = "1.0.108"

rbatis = { version = "4.5"}
headers = "0.4.0"
tokio-stream = "0.1.14"
futures = "0.3.29"

redis = { version = "0.24.0", features = ["aio", "tokio-comp", "futures"] }
redis_pool = "0.3.0"
